Fix small styling issues: TreeBox arrows now move when scrolling the container, and said container doesn't overflow the reference/comparison "tab"

--- a/Site/webapp/wdkCustomization/js/client/components/questions/FoldChange/FoldChange.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/questions/FoldChange/FoldChange.scss
@@ -65,6 +65,11 @@
           padding: 0 .3em;
         }
 
+        .wdk-CheckboxTree {
+          position: relative;
+          margin-left: 0;
+        }
+
         &.wdk-FoldChangeReferenceSample {
           background-color: rgb(180, 210, 235);
         }
